# crystals

./: .gitignore  AUTHORS  Crystals.sln  Crystals.vcproj  Doxyfile  LICENSE  Makefile  Makefile.in  README  README.md  SConstruct  bindings.c  bindings.h  configure  configure.ac  events.c  events.h  graphics.c  graphics.h  hash.c  hash.h  loader  loader.c  loader.h  main.c  main.h  map.c  map.h  mapview.c  mapview.h  module.c  module.h  object.c  object.h  optionparser.c  optionparser.h  parser.c  parser.h  posixy.c  posixy.h  (+2 more)
config/: default.cfg
doc/: .gitignore  mapformat-internal.tex  mapformat.tex  module.tex  optionparser.tex
ideas/: background_story_idea  dialogs  event.dialog.xml  graphics.txt  idea.actor.xml  idea.map.xml  map_making  mechanics.txt  multi_choice.dialog.xml  parser.py  plot.txt
maprender/: Makefile  events.c  events.h  graphics.c  graphics.h  main.c  main.h  map.c  map.h  mapview.c  mapview.h  module.c  module.h
maprender/modules/: gfx-sdl.c
maps/: test.map
modules/: bindings-lua.c  bindings-lua.h  bindings-python.c  event-sdl.c  gfx-sdl.c
src/: bindings.c  bindings.h  crystals.h  dialog.c  dialog.h  events.c  events.h  file.c  file.h  graphics.c  graphics.h  hash.c  hash.h  main.c  main.h  map.c  map.h  mapview.c  mapview.h  module.c  module.h  object.c  object.h  optionparser.c  parser.c  parser.h  state.c  state.h  timer.c  timer.h  types.h  util.c  util.h  xml.c  xml.h
src/field/: map.c  (+15 more)
tests/: .gitignore  lua.lua  module  module.c  module.h  optionparser.c  parser.c  parser.txt
tools/: dialog_creator.py  valgrind-python.supp
(+48 files in other folders)
